TM-11703 Add date range selector component

--- a/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
@@ -158,14 +158,22 @@
                                                                [(ngModel)]="model.instructionLink" />
                                                     </td>
                                                     <td class="label U" nowrap="nowrap">
-                                                        <label><span>Estimated Start</span></label>
+                                                        <label><span>Estimated Start/Finish</span></label>
                                                     </td>
                                                     <td class="valueNW">
+                                                        <kendo-dateinput
+                                                                [format]="getDateTimeFormat()"
+                                                                [(value)]="model.estimatedStart">
+                                                        </kendo-dateinput>
+
+                                                        <!--<span>{{model.estimatedStartUTC}}-{{model.estimatedFinishUTC}}</span>-->
+                                                       <!--
                                                         <kendo-datepicker
                                                                 name="estimatedStart"
                                                                 [format]="dateFormat"
                                                                 [(value)]="model.estimatedStart">
                                                         </kendo-datepicker>
+                                                        -->
                                                     </td>
                                                     <td class="label U" nowrap="nowrap">
                                                         <label><span>Actual Start</span></label>
@@ -196,11 +204,13 @@
                                                         <label><span>Estimated Finish</span></label>
                                                     </td>
                                                     <td class="valueNW">
+                                                        <!--
                                                         <kendo-datepicker
                                                                 name="estimatedFinish"
                                                                 [format]="dateFormat"
                                                                 [(value)]="model.estimatedFinish">
                                                         </kendo-datepicker>
+                                                        -->
                                                     </td>
                                                     <td class="label U" nowrap="nowrap">
                                                         <label><span>Actual Finish</span></label>
