--- a/web-app/tds/web-app/css/style.sass
+++ b/web-app/tds/web-app/css/style.sass
@@ -29,6 +29,7 @@
 @import "shared/components/tds-asset-tag-selector"
 @import "shared/components/aka.component"
 @import "shared/components/connector.component"
+@import "shared/components/date-range-selector.component"
 // Specific Module Layout/Components
 @import "shared/directives/tds-ui-prompt"
 @import "shared/directives/tds-ui-modal-decorator"
