TM-12077 was implemented four create buttons for all system assets view

--- a/web-app/tds/web-app/css/page/module/assetExplorer/asset-explorer-view-grid.component.sass
+++ b/web-app/tds/web-app/css/page/module/assetExplorer/asset-explorer-view-grid.component.sass
@@ -48,15 +48,15 @@
     width: 90%
 
   .text-delimited
-    white-space: normal;
-    word-wrap: break-word;
+    white-space: normal
+    word-wrap: break-word
   .k-grid-toolbar
     display: flex
     justify-content: space-between
 
     .bulkchange-section,
     .filters-section
-      display: flex;
+      display: flex
       align-items: center
 
     .filters-section
@@ -92,3 +92,6 @@
           background-color: #fff
           color: #777
           margin-right: 5px
+
+  .btn-between-space-5
+    margin-right: 5px
