TM-10993 POC - Lazy Loading - Removed the rest of Security Pages - Tested Pipe Translate Filter

--- a/web-app/tds/web-app/app-js/shared/modules/header/header.component.html
+++ b/web-app/tds/web-app/app-js/shared/modules/header/header.component.html
@@ -6,7 +6,7 @@
     </h1>
     <ol class="breadcrumb">
         <li *ngFor="let menu of pageMetaData.menu; let last = last;" [ngClass]="{'active' : last}" >
-            <a *ngIf="!last" [ngClass]="{'font-weight-bold':menu.navigateTo }" [uiSref]="menu.navigateTo">{{(menu.text || menu) | translate}}</a>
+            <a *ngIf="!last">{{(menu.text || menu) | translate}}</a>
             <ng-container *ngIf="last">
                 {{ menu | translate }}
             </ng-container>
