--- a/web-app/tds/web-app/css/elements/component/task-detail-component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-detail-component.sass
@@ -10,6 +10,9 @@
     .modal-body
       height: 86%
       form
+        .clickable
+          input
+            cursor: pointer
         .duration-controls
           display: flex
           align-items: center
