--- a/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
@@ -240,9 +240,9 @@
                                                         <kendo-dateinput
                                                                 name="estimatedFinish"
                                                                 class="clickable"
-                                                                (click)="openRangeDatesSelector()"
                                                                 [format]="getDateTimeFormat()"
-                                                                [(value)]="model.estimatedFinish" readonly="true">
+                                                                (click)="openRangeDatesSelector()"
+                                                                [(ngModel)]="model.estimatedFinish">
                                                         </kendo-dateinput>
                                                     </td>
 
@@ -253,15 +253,24 @@
                                                     <td class="valueNW">
                                                         <div class="duration-controls">
                                                             <div class="duration-value">
-                                                                <input type="text" [(ngModel)]="model.durationParts.days" name="durationDays" id="durationDays">
+                                                                <input type="number"
+                                                                       min="0"
+                                                                       (change)="updateEstimatedFinish('days')"
+                                                                       [(ngModel)]="model.durationParts.days" name="durationDays" id="durationDays">
                                                                 <label for="durationDays">Days</label>
                                                             </div>
                                                             <div  class="duration-value">
-                                                                <input type="text" [(ngModel)]="model.durationParts.hours" name="durationHours" id="durationHours">
+                                                                <input type="number"
+                                                                       min="0"
+                                                                       (change)="updateEstimatedFinish('hours')"
+                                                                       [(ngModel)]="model.durationParts.hours" name="durationHours" id="durationHours">
                                                                 <label for="durationHours">Hours</label>
                                                             </div>
                                                             <div  class="duration-value">
-                                                                <input type="text" [(ngModel)]="model.durationParts.minutes" name="durationMinutes" id="durationMinutes">
+                                                                <input type="number"
+                                                                       min="0"
+                                                                       (change)="updateEstimatedFinish('minutes')"
+                                                                       [(ngModel)]="model.durationParts.minutes" name="durationMinutes" id="durationMinutes">
                                                                 <label for="durationMinutes">Minutes</label>
                                                             </div>
                                                             <label data-toggle="popover"
@@ -282,7 +291,8 @@
                                                     <td class="valueNW">
                                                         <span>{{model.taskSpec}}</span>
                                                     </td>
-                                                    <td colspan="4"></td>
+                                                    <td colspan="4">
+                                                    </td>
                                                 </tr>
                                             </tbody>
                                         </table>
