--- a/web-app/tds/web-app/css/elements/component/task-detail-component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-detail-component.sass
@@ -10,6 +10,15 @@
     .modal-body
       height: 86%
       form
+        .estimated-finish
+          display: flex
+          justify-content: space-between
+          width: 100%
+          align-items: center
+          .k-dateinput
+            width: 90%
+          .delete-command
+            cursor: pointer
         .clickable
           input
             cursor: pointer
