TM-11703 On selected date, if lock in on just adjust the end date to the current duration, otherwise set the correct interval

--- a/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
@@ -278,7 +278,7 @@
                                                                    data-trigger="hover"
                                                                    data-content="Click to toggle the lock. When locked, changes to the Estimated Start/Finish will preserve the Duration">
                                                                 <i class="fa fa-fw  lock-state"
-                                                                   [ngClass]="model.locked ? 'fa-unlock' : 'fa-lock'"
+                                                                   [ngClass]="model.locked ? 'fa-lock' : 'fa-unlock'"
                                                                    (click)="onLockChange()">
                                                                 </i>
                                                             </label>
