--- a/web-app/tds/web-app/app-js/shared/components/date-range-selector/date-range-selector.component.html
+++ b/web-app/tds/web-app/app-js/shared/components/date-range-selector/date-range-selector.component.html
@@ -53,7 +53,7 @@
 			                           class="duration-value label-part"
 			                           data-content="Click to toggle the lock. When locked, changes to the Estimated Start/Finish will preserve the Duration">
 				                    <i class="fa fa-fw  lock-state"
-				                       [ngClass]="model.locked ? 'fa-unlock' : 'fa-lock'"
+				                       [ngClass]="model.locked ? 'fa-lock' : 'fa-unlock'"
 				                       (click)="model.locked = !model.locked">
 				                    </i>
 			                    </label>
